--- a/app/views/personal_admin/blog/_form.html.erb
+++ b/app/views/personal_admin/blog/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag  @blog.id.nil? ? '/sales-manager/create_blog' : "/sales-manager/update_blog/#{@blog.id}", method: @blog.id.nil? ? :post : :patch, html: {id:  "blog-form", class: "blog-form"} do |f| %>
+<%= form_tag  @blog.id.nil? ? '/sales-manager/create_blog' : "/sales-manager/update_blog/#{@blog.id}", method: @blog.id.nil? ? :post : :patch, multipart: true, html: {id:  "blog-form", class: "blog-form"} do |f| %>
   <div class="row">
     <div class="col-md-12">
       <div class="form-group">
@@ -26,8 +26,30 @@
     <div class="col-md-4">
       <div class="form-group">
         <label>Blog Image</label>
-        <%= file_field_tag('blog[desktop_image]', as: :ckeditor, class: "form-control") %>
+        <%= file_field_tag('blog[desktop_image]', class: "form-control") %>
         <p class='error'><%= show_errors(@blog, :desktop_image) %></p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <label>keywords</label>
+        <%= text_area_tag('blog[keywords]', @blog.keywords, class: "form-control") %>
+        <p class='error'><%= show_errors(@blog, :keywords) %></p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label>Meta Description</label>
+        <%= text_area_tag('blog[meta_description]', @blog.meta_description, class: "form-control") %>
+        <p class='error'><%= show_errors(@blog, :meta_description) %></p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label>Approved?</label><br>
+        <%= check_box_tag('blog[approved]', true, @blog.approved) %>
       </div>
     </div>
   </div>
@@ -36,7 +58,7 @@
       <div class="form-group">
         <label>Blog Description</label>
           <p class='error'><%= show_errors(@blog, :content) %></p>
-          <%= cktext_area 'blog[content]', "", :class => "tinymce" %>
+          <%= cktext_area 'blog[content]', '', :class => "tinymce" %>
       </div>
     </div>
   </div>
