--- a/app/views/blog/blog.html.erb
+++ b/app/views/blog/blog.html.erb
@@ -12,7 +12,7 @@
           </div>
           <br>
           <ul class="margin-left-0 details">
-            <li class="fa fa-calendar">&nbsp;<a href="#"><%= @blog.publish_date %></a></li> | 
+            <li class="fa fa-calendar">&nbsp;<a href="#"><%= @blog.publish_date %></a></li><a> | </a>
             <li class="fa fa-user">&nbsp;<a href="#"><%= @blog.auther_name %></a></li>
           </ul>
           <div class="blog-content clearfix">
