--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -300,8 +300,14 @@
 }
 
 .faq-container {
+  margin-top: 100px;
+  p, li {
+    font-size: 20px;
+  }
   h4 {
     font-size: 25px;
+    border-bottom: 1px solid;
+    padding-bottom: 5px;
   }
 }
 
