added blog and faq link at the footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -259,6 +259,11 @@
               <li><a href="/channel_partner">Franchise</a></li>
               <li><a href="/career">Career</a></li>
             </ul>
+            <h4>Blogs & FAQs</h4>
+            <ul style="list-style: none; padding: 0px;">
+              <li><a href="/blogs">Blogs</a></li>
+              <li><a href="/faq">FAQs</a></li>
+            </ul>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
             <h4>Terms and Policy</h4>
