--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -869,5 +869,91 @@
       </div>
       <div class="col-md-2"></div>
     </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h4 class="card-title">
+          <a href="javascript:void(0)" data-toggle="collapse" data-target="#wicl">What is a car loan?</a>
+        </h4>
+        <div id="wicl" class="collapse">
+          <p>A car loan helps a person achieve his dream of owning a car. Today having a car, has become a status symbol among people. To help people own a car, banks and NBFC provide car loans.</p>
+          <p>A car loan works in a simple pattern. You can take a car loan from a bank and own a car, and repay the loan amount afterward by full payment or monthly installments.</p>
+          <p>There are two types of car loans;</p>
+          <ul>
+            <li>Used car loan-A loan taken to buy a used card is called a used car loan. For example a second-hand car.</li>
+            <li>Used car loan-A loan taken to buy a used card is called a used car loan. For example a second-hand car.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h4 class="card-title">
+          <a href="javascript:void(0)" data-toggle="collapse" data-target="#wituocl">What is a use of the car loan?</a>
+        </h4>
+        <div id="wituocl" class="collapse">
+          <p>A used car loan is also called a pre-owned car loan. A used car loan is taken to buy a car that was previously pre-owned by someone else. A used car loan is most preferred, as a car price depreciates yearly. If you buy a new car now, its price declines to as low as 16% next year. So, instead, it's better to buy a used car. The depreciation rate and insurance on a used car purchase are lower than on a new car.</p>
+          <p>The interest rate on the used car starts from 9.25% onwards. The loan tenure for a used car loan is 5-7 years.</p>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h4 class="card-title">
+          <a href="javascript:void(0)" data-toggle="collapse" data-target="#htgcl">How to get a car loan?</a>
+        </h4>
+        <div id="htgcl" class="collapse">
+          <p>To get a car loan different banks and NBFC have different eligibility criteria. Here is some are of the general requirements;</p>
+          <ul>
+            <li>The person applying should be above the age of 18 years.</li>
+            <li>Identity proof.</li>
+            <li>Address proof.</li>
+            <li>Proof of income.</li>
+            <li>Minimum monthly income Rs. 20,000.</li>
+            <li>At least 1 year of experience.</li>
+            <li>Must be salaried or self-employed.</li>
+            <li>A CIBIL score plays a major role in car loan approval. The CIBIL score should be above 700.</li>
+          </ul>
+          <p>If looking to buy a used car loan, some banks also ask for a vehicle inspection report.</p>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h4 class="card-title">
+          <a href="javascript:void(0)" data-toggle="collapse" data-target="#wistclir">What is the car loan interest rate?</a>
+        </h4>
+        <div id="wistclir" class="collapse">
+          <p>The interest rate offered on a car loan can change depending on the CIBIL score. If you have a good CIBIL score, you can even negotiate for a low-interest rate.</p>
+          <p>Various banks offer car loans, among which HDFC, Axis, and ICICI banks are the most preferable.</p>
+          <p>The interest rate on a car loan is different for a used car and a new car purchase. For a new car, the loan interest rate starts from 6.75% to 7.30% p.a. For a used car, the loan interest rate starts from 8.8% to 17% p.a.</p>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h4 class="card-title">
+          <a href="javascript:void(0)" data-toggle="collapse" data-target="#wiclc">What is a car loan calculator?</a>
+        </h4>
+        <div id="wiclc" class="collapse">
+          <p>A car loan can be calculated by the formula; <i>[P x R x (1+R)^N]/[(1+R)^N-1]</i></p>
+          <p>Where P = principal amount</p>
+          <p>R = Rate of interest</p>
+          <p>N = time for repayment</p>
+          <p>Suppose a person is looking to buy a new car for 15 lakh, the interest rate on the car loan is 8%, and the repayment tenure is 5 years.</p>
+          <p>The EMI on the car loan will be Rs. 30,315, the interest amount Rs. 3,24,875, and the total payable amount will be Rs. 18,24,875.</p>
+          <p>You can even foreclose the car loan by just paying a prepayment charge, which will be a small percentage of the outstanding principal amount.</p>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
   </div>
 </section>
